fix: html layout shift problem & dialog overflow-y problem

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,7 @@
         --ring: 216 12.2% 83.9%;
     }
 }
+
 @layer base {
     * {
         @apply m-0 box-border border-border p-0;
@@ -55,5 +56,20 @@
 
     body {
         @apply overflow-scroll bg-background font-roboto text-foreground;
+    }
+}
+
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
     }
 }
